# gimbal_control

./: CMakeLists.txt  package.xml
include/: MiniPID.hpp
launch/: gimbal_ctrl.launch
src/: gimbal_ctrl.cpp
